--- a/Q_14.ipynb
+++ b/Q_14.ipynb
@@ -871,8 +871,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:09:28.925317Z",
-     "start_time": "2025-08-28T12:09:28.921912Z"
+     "end_time": "2025-08-28T12:15:15.085492Z",
+     "start_time": "2025-08-28T12:15:15.015537Z"
     }
    },
    "cell_type": "code",
@@ -880,11 +880,31 @@
     "# b)\n",
     "import joblib\n",
     "\n",
-    "# Save the trained pipeline"
+    "# Save the trained pipeline\n",
+    "joblib.dump(model_pipeline, \"models/car_price_model.pkl\")"
    ],
    "id": "b62548c5f62f34",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['models/car_price_model.pkl']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 45
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": null,
+   "source": "",
+   "id": "ce3994dc70c82e36"
   }
  ],
  "metadata": {
