Added a quick comment to c)

--- a/Q_14.ipynb
+++ b/Q_14.ipynb
@@ -881,7 +881,9 @@
     "import joblib\n",
     "\n",
     "# Save the trained pipeline\n",
-    "joblib.dump(model_pipeline, \"models/car_price_model.pkl\")"
+    "joblib.dump(model_pipeline, \"models/car_price_model.pkl\")\n",
+    "\n",
+    "# Continues in the streamlit_app.py"
    ],
    "id": "b62548c5f62f34",
    "outputs": [
@@ -900,11 +902,9 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ce3994dc70c82e36"
+   "cell_type": "markdown",
+   "source": "c) Yes it could be used for a price predictor so you could get a good sense of what your car is worth.",
+   "id": "373bbb000a83b2aa"
   }
  ],
  "metadata": {
